...
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!--Pendahuluan-->
    <!-- Gambar -->
    <string-array name="pendahuluanGambar">
        <item>@drawable/menu1</item>
        <item>@drawable/menu2</item>
        <item>@drawable/menu3</item>
        <item>@drawable/menu3</item>
        <item>@drawable/menu3</item>
        <item>@drawable/menu3</item>
    </string-array>

    <!-- Judul -->
...
berlatih bersikap positif. Dengan demikian diskusi kelompok dapat
meningkatkan kreativitas siswa, serta membina kemampuan
berkomunikasi termasuk di dalamnya ketrampilan berbahasa.</string>
    <string name="kdm_8_2">
        Ada 6 (enam) keterampilan yang harus dimiliki guru terkait
membimbing diskusi kelompok kecil, yaitu:</string>
    <string name="str_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="tap_on_mic">Tekan mic untuk merekam</string>
    <string name="speech_prompt">Katakan sesuatu&#8230;</string>
    <string name="speech_not_supported">Maaf! Perangkat anda tidak mendukung fitur ini</string>
    <string name="menu_verbal">Tes Verbal</string>
    <string name="verbal_subtitle">Kumpulan Tes Verbal</string>
...
        <item>Kita cukupkan sekian</item>
        <item>Apakah ada pertanyaan</item>
    </string-array>

    <!--Icon Soal Verbal-->
    <string-array name="verbalGambar">
        <item>@drawable/menu4</item>
        <item>@drawable/menu4</item>
        <item>@drawable/menu4</item>
        <item>@drawable/menu4</item>
        <item>@drawable/menu4</item>
        <item>@drawable/menu4</item>
    </string-array>
...
